force-app/main/default/objects/KimbleOne__RateCardItem__c/KimbleOne__RateCardItem__c.object-meta.xml
<CustomObject>
    <label>Rate Card Item</label>
    <nameField>
        <label>Rate Card Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Card Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>