force-app/main/default/objects/KimbleOne__RateCardItem__c/fields/KimbleOne__CombinationKey__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CombinationKey__c</fullName>
    <label>Combination Key</label>
    <type>TextArea</type>
</CustomField>