force-app/main/default/objects/KimbleOne__RateCardItem__c/fields/KimbleOne__ContextId__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ContextId__c</fullName>
    <label>Override Context</label>
    <length>80</length>
    <type>Text</type>
</CustomField>