force-app/main/default/objects/KimbleOne__RateCardItem__c/fields/KimbleOne__Rate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Rate__c</fullName>
    <label>Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>