force-app/main/default/objects/KimbleOne__RateCardItem__c/fields/KimbleOne__RateCard__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RateCard__c</fullName>
    <label>Rate Card</label>
    <referenceTo>KimbleOne__RateCard__c</referenceTo>
    <relationshipLabel>Rate Card Items</relationshipLabel>
    <relationshipName>RateCardItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>