force-app/main/default/objects/KimbleOne__RateCardItem__c/fields/KimbleOne__RateFactor__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RateFactor__c</fullName>
    <label>Rate Factor</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>